tests/js_error/source_locations/expression/yield_star/return_check_iterator_result_object_throws.exp
TypeError: iterator result must be an object
   ┌ tests/js_error/source_locations/expression/yield_star/return_check_iterator_result_object_throws.js:15:3
   |
15 |   yield* iterable;
   |   ^
Stack trace:
  at generator (tests/js_error/source_locations/expression/yield_star/return_check_iterator_result_object_throws.js:15:3)
  at return (<native>)
  at <global> (tests/js_error/source_locations/expression/yield_star/return_check_iterator_result_object_throws.js:20:1)